sdk/include/phapppub.h


typedef struct _PH_MODULE_ITEM *PPH_MODULE_ITEM;

typedef struct _PH_MODULE_PROVIDER *PPH_MODULE_PROVIDER;

typedef struct _PH_THREAD_ITEM *PPH_THREAD_ITEM;

typedef struct _PH_THREAD_PROVIDER *PPH_THREAD_PROVIDER;

typedef struct _PH_HANDLE_ITEM *PPH_HANDLE_ITEM;

typedef struct _PH_HANDLE_PROVIDER *PPH_HANDLE_PROVIDER;



typedef _Function_class_(PH_SEARCHCONTROL_CALLBACK)
VOID NTAPI PH_SEARCHCONTROL_CALLBACK(
    _In_ ULONG_PTR MatchHandle,
    _In_opt_ PVOID Context
    );


//
// modprv
//

typedef struct _PH_MODULE_ITEM
{
    PVOID BaseAddress;
    PVOID ParentBaseAddress;
    PVOID EntryPoint;
    ULONG Size;
    ULONG Flags;
    ULONG Type;
    USHORT LoadReason;
    USHORT LoadCount;
    PPH_STRING Name;
    PPH_STRING FileName;
    PH_IMAGE_VERSION_INFO VersionInfo;
    ULONG EnclaveType;
    PVOID EnclaveBaseAddress;
    SIZE_T EnclaveSize;

    union
    {
        BOOLEAN StateFlags;
#ifndef NO_BITFIELD
        struct
        {
            BOOLEAN JustProcessed : 1;
            BOOLEAN IsFirst : 1;
            BOOLEAN ImageNotAtBase : 1;
            BOOLEAN ImageKnownDll : 1;
            BOOLEAN Spare : 4;
        };
#endif // NO_BITFIELD
    };

    enum _VERIFY_RESULT VerifyResult;
    PPH_STRING VerifySignerName;

    USHORT ImageMachine;
    ULONG ImageCHPEVersion;
    ULONG ImageTimeDateStamp;
    USHORT ImageCharacteristics;
    USHORT ImageDllCharacteristics;
    ULONG ImageDllCharacteristicsEx;
    ULONG GuardFlags;

    LARGE_INTEGER LoadTime;
    LARGE_INTEGER FileLastWriteTime;
    LARGE_INTEGER FileEndOfFile;

    NTSTATUS ImageCoherencyStatus;
    FLOAT ImageCoherency;

    WCHAR BaseAddressString[PH_PTR_STR_LEN_1];
    WCHAR ParentBaseAddressString[PH_PTR_STR_LEN_1];
    WCHAR EntryPointAddressString[PH_PTR_STR_LEN_1];
    WCHAR EnclaveBaseAddressString[PH_PTR_STR_LEN_1];
} PH_MODULE_ITEM, *PPH_MODULE_ITEM;


typedef struct _PH_MODULE_PROVIDER
{
    PPH_HASHTABLE ModuleHashtable;
    PH_FAST_LOCK ModuleHashtableLock;
    PH_CALLBACK ModuleAddedEvent;
    PH_CALLBACK ModuleModifiedEvent;
    PH_CALLBACK ModuleRemovedEvent;
    PH_CALLBACK UpdatedEvent;

    HANDLE ProcessId;
    HANDLE ProcessHandle;
    PPH_STRING ProcessFileName;
    PPH_STRING PackageFullName;
#ifndef NO_BITFIELD
    SLIST_HEADER QueryListHead;
#else // NO_BITFIELD
    union {
      struct {  // original struct
        ULONGLONG Alignment;
        ULONGLONG Region;
      } DUMMYSTRUCTNAME;
      ULONGLONG HeaderX64[2];
    }
#endif // NO_BITFIELD
    NTSTATUS RunStatus;

    union
    {
        BOOLEAN Flags;
#ifndef NO_BITFIELD
        struct
        {
            BOOLEAN HaveFirst : 1;
            BOOLEAN IsHandleValid : 1;
            BOOLEAN IsSubsystemProcess : 1;
            BOOLEAN ControlFlowGuardEnabled : 1;
            BOOLEAN CetEnabled : 1;
            BOOLEAN CetStrictModeEnabled : 1;
            BOOLEAN ZeroPadAddresses : 1;
            BOOLEAN Spare : 1;
        };
#endif // NO_BITFIELD
    };
    UCHAR ImageCoherencyScanLevel;
} PH_MODULE_PROVIDER, *PPH_MODULE_PROVIDER;


//
// thrdprv
//

typedef struct _PH_THREAD_ITEM
{
    union
    {
        CLIENT_ID ClientId;
        struct
        {
            HANDLE ProcessId;
            HANDLE ThreadId;
        };
    };

    LARGE_INTEGER CreateTime;
    LARGE_INTEGER KernelTime;
    LARGE_INTEGER UserTime;
    PH_UINT64_DELTA CpuKernelDelta;
    PH_UINT64_DELTA CpuUserDelta;
    PH_UINT32_DELTA ContextSwitchesDelta;
    PH_UINT64_DELTA CyclesDelta;

    FLOAT CpuUsage;
    FLOAT CpuKernelUsage;
    FLOAT CpuUserUsage;

    KPRIORITY Priority;
    KPRIORITY BasePriority;
    PKAFFINITY AffinityMasks; // PhSystemProcessorInformation.NumberOfProcessorGroups
    ULONG AffinityPopulationCount;
    ULONG WaitTime;
    KTHREAD_STATE State;
    KWAIT_REASON WaitReason;
    KPRIORITY BasePriorityIncrement;

    HANDLE ThreadHandle;

    PPH_STRING ServiceName;

    PVOID StartAddressWin32;
    PVOID StartAddress;

    NTSTATUS ThreadHandleStatus;
    NTSTATUS StartAddressStatus;

    PPH_STRING StartAddressWin32String;
    PPH_STRING StartAddressWin32FileName;
    enum _PH_SYMBOL_RESOLVE_LEVEL StartAddressWin32ResolveLevel;

    PPH_STRING StartAddressString;
    PPH_STRING StartAddressFileName;
    enum _PH_SYMBOL_RESOLVE_LEVEL StartAddressResolveLevel;

    BOOLEAN IsGuiThread;
    BOOLEAN JustResolved;
    WCHAR ThreadIdString[PH_INT32_STR_LEN_1];
    WCHAR ThreadIdHexString[PH_PTR_STR_LEN_1];
    WCHAR LxssThreadIdString[PH_INT32_STR_LEN_1];

    IO_COUNTERS IoCounters;

    ULONG LxssThreadId;
    BOOLEAN PowerThrottling;
} PH_THREAD_ITEM, *PPH_THREAD_ITEM;


typedef struct _PH_THREAD_PROVIDER
{
    PPH_HASHTABLE ThreadHashtable;
    PH_FAST_LOCK ThreadHashtableLock;
    PH_CALLBACK ThreadAddedEvent;
    PH_CALLBACK ThreadModifiedEvent;
    PH_CALLBACK ThreadRemovedEvent;
    PH_CALLBACK UpdatedEvent;
    PH_CALLBACK LoadingStateChangedEvent;

    HANDLE ProcessId;
    HANDLE ProcessHandle;

    union
    {
        BOOLEAN Flags;
#ifndef NO_BITFIELD
        struct
        {
            BOOLEAN HasServices : 1;
            BOOLEAN HasServicesKnown : 1;
            BOOLEAN Terminating : 1;
            BOOLEAN Spare : 5;
        };
#endif // NO_BITFIELD
    };

    struct _PH_SYMBOL_PROVIDER *SymbolProvider;

#ifndef NO_BITFIELD
    SLIST_HEADER QueryListHead;
#else // NO_BITFIELD
    union {
      struct {  // original struct
        ULONGLONG Alignment;
        ULONGLONG Region;
      } DUMMYSTRUCTNAME;
      ULONGLONG HeaderX64[2];
    }
#endif // NO_BITFIELD
    PH_QUEUED_LOCK LoadSymbolsLock;
    LONG SymbolsLoading;
    ULONG64 RunId;
    ULONG64 SymbolsLoadedRunId;
} PH_THREAD_PROVIDER, *PPH_THREAD_PROVIDER;

typedef struct _PH_HANDLE_ITEM
{
    PH_HASH_ENTRY HashEntry;

    PVOID Object;
    HANDLE Handle;
    HANDLE ProcessId;
    ULONG Attributes;
    ACCESS_MASK GrantedAccess;
    ULONG TypeIndex;
    ULONG FileFlags;

    PPH_STRING TypeName;
    PPH_STRING ObjectName;
    PPH_STRING BestObjectName;

    WCHAR HandleString[PH_PTR_STR_LEN_1];
    WCHAR GrantedAccessString[PH_PTR_STR_LEN_1];
    WCHAR ObjectString[PH_PTR_STR_LEN_1];
} PH_HANDLE_ITEM, *PPH_HANDLE_ITEM;


typedef struct _PH_HANDLE_PROVIDER
{
    PPH_HASH_ENTRY *HandleHashSet;
    ULONG HandleHashSetSize;
    ULONG HandleHashSetCount;
    PH_QUEUED_LOCK HandleHashSetLock;

    PH_CALLBACK HandleAddedEvent;
    PH_CALLBACK HandleModifiedEvent;
    PH_CALLBACK HandleRemovedEvent;
    PH_CALLBACK HandleUpdatedEvent;

    HANDLE ProcessId;
    HANDLE ProcessHandle;

    PPH_HASHTABLE TempListHashtable;
    NTSTATUS RunStatus;
} PH_HANDLE_PROVIDER, *PPH_HANDLE_PROVIDER;

typedef struct _PH_PLUGIN PH_PLUGIN, *PPH_PLUGIN;


typedef struct _PH_PLUGIN PH_PLUGIN, *PPH_PLUGIN;

typedef struct _PH_PLUGIN
{
    // Public

    PH_AVL_LINKS Links;

    PVOID DllBase;

} PH_PLUGIN, *PPH_PLUGIN;


_Function_class_(PH_PLUGIN_ENUMERATE)
typedef NTSTATUS (NTAPI PH_PLUGIN_ENUMERATE)(
    _In_ PPH_PLUGIN Information,
    _In_opt_ PVOID Context
    );