lib/src/system_informer/generated_bindings.dart


  @ffi.Array.multi([25])
  external ffi.Array<WCHAR> BaseAddressString;

  @ffi.Array.multi([25])
  external ffi.Array<WCHAR> ParentBaseAddressString;

  @ffi.Array.multi([25])
  external ffi.Array<WCHAR> EntryPointAddressString;

  @ffi.Array.multi([25])
  external ffi.Array<WCHAR> EnclaveBaseAddressString;
}

/// modprv
typedef PPH_MODULE_ITEM = ffi.Pointer<PH_MODULE_ITEM>;
typedef PH_HASHTABLE_EQUAL_FUNCTION
    = ffi.NativeFunction<BOOLEAN Function(PVOID Entry1, PVOID Entry2)>;
typedef PPH_HASHTABLE_EQUAL_FUNCTION = ffi.Pointer<PH_HASHTABLE_EQUAL_FUNCTION>;
typedef PH_HASHTABLE_HASH_FUNCTION
    = ffi.NativeFunction<ULONG Function(PVOID Entry)>;
typedef PPH_HASHTABLE_HASH_FUNCTION = ffi.Pointer<PH_HASHTABLE_HASH_FUNCTION>;
typedef PULONG = ffi.Pointer<ULONG>;

final class PH_HASHTABLE extends ffi.Struct {
  @ULONG()
  external int EntrySize;

  external PPH_HASHTABLE_EQUAL_FUNCTION EqualFunction;

  external PPH_HASHTABLE_HASH_FUNCTION HashFunction;

  @ULONG()
  external int AllocatedBuckets;

  external PULONG Buckets;

  @ULONG()
  external int AllocatedEntries;

  external PVOID Entries;

  @ULONG()
  external int Count;

  @ULONG()
  external int FreeEntry;

  @ULONG()
  external int NextEntry;
}

typedef PPH_HASHTABLE = ffi.Pointer<PH_HASHTABLE>;
typedef PH_CONDITION = PH_QUEUED_LOCK;

final class PH_CALLBACK extends ffi.Struct {
  external LIST_ENTRY$1 ListHead;

  external PH_QUEUED_LOCK$1 ListLock;

  external PH_CONDITION BusyCondition;
}

typedef PH_CALLBACK$1 = PH_CALLBACK;

final class UnnamedStruct17 extends ffi.Struct {
  @ULONGLONG()
  external int Alignment;

  @ULONGLONG()
  external int Region;
}

final class UnnamedUnion25 extends ffi.Union {
  external UnnamedStruct17 unnamed;

  @ffi.Array.multi([2])
  external ffi.Array<ULONGLONG> HeaderX64;
}

final class UnnamedUnion26 extends ffi.Union {
  @BOOLEAN()
  external int Flags;
}

final class PH_MODULE_PROVIDER extends ffi.Struct {
  external PPH_HASHTABLE ModuleHashtable;

  external PH_FAST_LOCK$1 ModuleHashtableLock;

  external PH_CALLBACK$1 ModuleAddedEvent;

  external PH_CALLBACK$1 ModuleModifiedEvent;

  external PH_CALLBACK$1 ModuleRemovedEvent;

  external PH_CALLBACK$1 UpdatedEvent;

  external HANDLE ProcessId;

  external HANDLE ProcessHandle;

  external PPH_STRING ProcessFileName;

  external PPH_STRING PackageFullName;

  external UnnamedUnion25 NTSTATUS;

  external UnnamedUnion26 unnamed;

  @UCHAR()
  external int ImageCoherencyScanLevel;
}

typedef PPH_MODULE_PROVIDER = ffi.Pointer<PH_MODULE_PROVIDER>;

final class CLIENT_ID extends ffi.Struct {
  external HANDLE UniqueProcess;

  external HANDLE UniqueThread;
}

typedef CLIENT_ID$1 = CLIENT_ID;

final class UnnamedStruct18 extends ffi.Struct {
  external HANDLE ProcessId;

  external HANDLE ThreadId;
}

final class UnnamedUnion27 extends ffi.Union {
  external CLIENT_ID$1 ClientId;

  external UnnamedStruct18 unnamed;
}

enum KTHREAD_STATE {
  Initialized(0),
  Ready(1),
  Running(2),
  Standby(3),
  Terminated(4),
  Waiting(5),
  Transition(6),
  DeferredReady(7),
  GateWaitObsolete(8),
  WaitingForProcessInSwap(9),
  MaximumThreadState(10);

  final int value;
  const KTHREAD_STATE(this.value);

  static KTHREAD_STATE fromValue(int value) => switch (value) {
        0 => Initialized,
        1 => Ready,
        2 => Running,
        3 => Standby,
        4 => Terminated,
        5 => Waiting,
        6 => Transition,
        7 => DeferredReady,
        8 => GateWaitObsolete,
        9 => WaitingForProcessInSwap,
        10 => MaximumThreadState,
        _ => throw ArgumentError('Unknown value for KTHREAD_STATE: $value'),
      };
}

enum KWAIT_REASON {
  Executive(0),
  FreePage(1),
  PageIn(2),
  PoolAllocation(3),
  DelayExecution(4),
  Suspended(5),
  UserRequest(6),
  WrExecutive(7),
  WrFreePage(8),
  WrPageIn(9),
  WrPoolAllocation(10),
  WrDelayExecution(11),
  WrSuspended(12),
  WrUserRequest(13),
  WrEventPair(14),
  WrQueue(15),
  WrLpcReceive(16),
  WrLpcReply(17),
  WrVirtualMemory(18),
  WrPageOut(19),
  WrRendezvous(20),
  WrKeyedEvent(21),
  WrTerminated(22),
  WrProcessInSwap(23),
  WrCpuRateControl(24),
  WrCalloutStack(25),
  WrKernel(26),
  WrResource(27),
  WrPushLock(28),
  WrMutex(29),
  WrQuantumEnd(30),
  WrDispatchInt(31),
  WrPreempted(32),
  WrYieldExecution(33),
  WrFastMutex(34),
  WrGuardedMutex(35),
  WrRundown(36),
  WrAlertByThreadId(37),
  WrDeferredPreempt(38),
  WrPhysicalFault(39),
  WrIoRing(40),
  WrMdlCache(41),
  WrRcu(42),
  MaximumWaitReason(43);

  final int value;
  const KWAIT_REASON(this.value);

  static KWAIT_REASON fromValue(int value) => switch (value) {
        0 => Executive,
        1 => FreePage,
        2 => PageIn,
        3 => PoolAllocation,
        4 => DelayExecution,
        5 => Suspended,
        6 => UserRequest,
        7 => WrExecutive,
        8 => WrFreePage,
        9 => WrPageIn,
        10 => WrPoolAllocation,
        11 => WrDelayExecution,
        12 => WrSuspended,
        13 => WrUserRequest,
        14 => WrEventPair,
        15 => WrQueue,
        16 => WrLpcReceive,
        17 => WrLpcReply,
        18 => WrVirtualMemory,
        19 => WrPageOut,
        20 => WrRendezvous,
        21 => WrKeyedEvent,
        22 => WrTerminated,
        23 => WrProcessInSwap,
        24 => WrCpuRateControl,
        25 => WrCalloutStack,
        26 => WrKernel,
        27 => WrResource,
        28 => WrPushLock,
        29 => WrMutex,
        30 => WrQuantumEnd,
        31 => WrDispatchInt,
        32 => WrPreempted,
        33 => WrYieldExecution,
        34 => WrFastMutex,
        35 => WrGuardedMutex,
        36 => WrRundown,
        37 => WrAlertByThreadId,
        38 => WrDeferredPreempt,
        39 => WrPhysicalFault,
        40 => WrIoRing,
        41 => WrMdlCache,
        42 => WrRcu,
        43 => MaximumWaitReason,
        _ => throw ArgumentError('Unknown value for KWAIT_REASON: $value'),
      };
}

typedef PH_SYMBOL_RESOLVE_LEVEL = data_type.PH_SYMBOL_RESOLVE_LEVEL;

/// thrdprv
final class PH_THREAD_ITEM extends ffi.Struct {
  external UnnamedUnion27 unnamed;

  external LARGE_INTEGER$1 CreateTime;

  external LARGE_INTEGER$1 KernelTime;

  external LARGE_INTEGER$1 UserTime;

  external PH_UINT64_DELTA$1 CpuKernelDelta;

  external PH_UINT64_DELTA$1 CpuUserDelta;

  external PH_UINT32_DELTA$1 ContextSwitchesDelta;

  external PH_UINT64_DELTA$1 CyclesDelta;

  @FLOAT()
  external double CpuUsage;

  @FLOAT()
  external double CpuKernelUsage;

  @FLOAT()
  external double CpuUserUsage;

  @KPRIORITY()
  external int Priority;

  @KPRIORITY()
  external int BasePriority;

  /// PhSystemProcessorInformation.NumberOfProcessorGroups
  external PKAFFINITY AffinityMasks;

  @ULONG()
  external int AffinityPopulationCount;

  @ULONG()
  external int WaitTime;

  @ffi.UnsignedInt()
  external int StateAsInt;

  KTHREAD_STATE get State => KTHREAD_STATE.fromValue(StateAsInt);

  @ffi.UnsignedInt()
  external int WaitReasonAsInt;

  KWAIT_REASON get WaitReason => KWAIT_REASON.fromValue(WaitReasonAsInt);

  @KPRIORITY()
  external int BasePriorityIncrement;

  external HANDLE ThreadHandle;

  external PPH_STRING ServiceName;

  external PVOID StartAddressWin32;

  external PVOID StartAddress;

  @NTSTATUS()
  external int ThreadHandleStatus;

  @NTSTATUS()
  external int StartAddressStatus;

  external PPH_STRING StartAddressWin32String;

  external PPH_STRING StartAddressWin32FileName;

  @ffi.UnsignedInt()
  external int StartAddressWin32ResolveLevelAsInt;

  PH_SYMBOL_RESOLVE_LEVEL get StartAddressWin32ResolveLevel =>
      PH_SYMBOL_RESOLVE_LEVEL.fromValue(StartAddressWin32ResolveLevelAsInt);

  external PPH_STRING StartAddressString;

  external PPH_STRING StartAddressFileName;

  @ffi.UnsignedInt()
  external int StartAddressResolveLevelAsInt;

  PH_SYMBOL_RESOLVE_LEVEL get StartAddressResolveLevel =>
      PH_SYMBOL_RESOLVE_LEVEL.fromValue(StartAddressResolveLevelAsInt);

  @BOOLEAN()
  external int IsGuiThread;

  @BOOLEAN()
  external int JustResolved;

  @ffi.Array.multi([13])
  external ffi.Array<WCHAR> ThreadIdString;

  @ffi.Array.multi([25])
  external ffi.Array<WCHAR> ThreadIdHexString;

  @ffi.Array.multi([13])
  external ffi.Array<WCHAR> LxssThreadIdString;

  external IO_COUNTERS$1 IoCounters;

  @ULONG()
  external int LxssThreadId;

  @BOOLEAN()
  external int PowerThrottling;
}

/// thrdprv
typedef PPH_THREAD_ITEM = ffi.Pointer<PH_THREAD_ITEM>;

final class UnnamedUnion28 extends ffi.Union {
  @BOOLEAN()
  external int Flags;
}

final class UnnamedStruct19 extends ffi.Struct {
  @ULONGLONG()
  external int Alignment;

  @ULONGLONG()
  external int Region;
}

final class UnnamedUnion29 extends ffi.Union {
  external UnnamedStruct19 unnamed;

  @ffi.Array.multi([2])
  external ffi.Array<ULONGLONG> HeaderX64;
}

final class PH_THREAD_PROVIDER extends ffi.Struct {
  external PPH_HASHTABLE ThreadHashtable;

  external PH_FAST_LOCK$1 ThreadHashtableLock;

  external PH_CALLBACK$1 ThreadAddedEvent;

  external PH_CALLBACK$1 ThreadModifiedEvent;

  external PH_CALLBACK$1 ThreadRemovedEvent;

  external PH_CALLBACK$1 UpdatedEvent;

  external PH_CALLBACK$1 LoadingStateChangedEvent;

  external HANDLE ProcessId;

  external HANDLE ProcessHandle;

  external UnnamedUnion28 unnamed;

  external ffi.Pointer<PH_SYMBOL_PROVIDER> SymbolProvider;

  external UnnamedUnion29 PH_QUEUED_LOCK;

  @LONG()
  external int SymbolsLoading;

  @ULONG64()
  external int RunId;

  @ULONG64()
  external int SymbolsLoadedRunId;
}

typedef PPH_THREAD_PROVIDER = ffi.Pointer<PH_THREAD_PROVIDER>;
typedef ACCESS_MASK = DWORD;

final class PH_HANDLE_ITEM extends ffi.Struct {
  external PH_HASH_ENTRY$1 HashEntry;

  external PVOID Object;

  external HANDLE Handle;

  external HANDLE ProcessId;

  @ULONG()
  external int Attributes;

  @ACCESS_MASK()
  external int GrantedAccess;

  @ULONG()
  external int TypeIndex;

  @ULONG()
  external int FileFlags;

  external PPH_STRING TypeName;

  external PPH_STRING ObjectName;

  external PPH_STRING BestObjectName;

  @ffi.Array.multi([25])
  external ffi.Array<WCHAR> HandleString;

  @ffi.Array.multi([25])
  external ffi.Array<WCHAR> GrantedAccessString;

  @ffi.Array.multi([25])
  external ffi.Array<WCHAR> ObjectString;
}

typedef PPH_HANDLE_ITEM = ffi.Pointer<PH_HANDLE_ITEM>;
typedef PPH_HASH_ENTRY = ffi.Pointer<PH_HASH_ENTRY>;

final class PH_HANDLE_PROVIDER extends ffi.Struct {
  external ffi.Pointer<PPH_HASH_ENTRY> HandleHashSet;

  @ULONG()
  external int HandleHashSetSize;

  @ULONG()
  external int HandleHashSetCount;

  external PH_QUEUED_LOCK$1 HandleHashSetLock;

  external PH_CALLBACK$1 HandleAddedEvent;

  external PH_CALLBACK$1 HandleModifiedEvent;

  external PH_CALLBACK$1 HandleRemovedEvent;

  external PH_CALLBACK$1 HandleUpdatedEvent;

  external HANDLE ProcessId;

  external HANDLE ProcessHandle;

  external PPH_HASHTABLE TempListHashtable;

  @NTSTATUS()
  external int RunStatus;
}

typedef PPH_HANDLE_PROVIDER = ffi.Pointer<PH_HANDLE_PROVIDER>;

final class PH_AVL_LINKS extends ffi.Struct {
  external ffi.Pointer<PH_AVL_LINKS> Parent;

  external ffi.Pointer<PH_AVL_LINKS> Left;

  external ffi.Pointer<PH_AVL_LINKS> Right;

  @LONG()
  external int Balance;
}

typedef PH_AVL_LINKS$1 = PH_AVL_LINKS;

final class MEMORY_BASIC_INFORMATION extends ffi.Struct {
  external PVOID BaseAddress;

  external PVOID AllocationBase;

  @DWORD()
  external int AllocationProtect;

  @WORD()
  external int PartitionId;

  @SIZE_T()
  external int RegionSize;

  @DWORD()
  external int State;

  @DWORD()
  external int Protect;

  @DWORD()
  external int Type;
}

typedef MEMORY_BASIC_INFORMATION$1 = MEMORY_BASIC_INFORMATION;

final class UnnamedStruct20 extends ffi.Struct {
  external PVOID BaseAddress;

  external PVOID AllocationBase;

  @ULONG()
  external int AllocationProtect;

  @SIZE_T()
  external int RegionSize;

  @ULONG()
  external int State;

  @ULONG()
  external int Protect;

  @ULONG()
  external int Type;
}
